--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -48,7 +48,7 @@ As a control sample, the polymerisation was performed without any nanoparticles 
 \end{table}
 
 \subsection{Nanoparticle Sample Characterisation}
-Before sample preparation, the iron oxide nanoparticles as received were diluted with Toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm (nominal "20\,nm" diameter) 4.1$\pm$0.8 \,nm	("10\,nm" diameter) 3.1$\pm$0.6\,nm ("5\,nm"). In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion  can be seen as the inter-particle distance.
+Before sample preparation, the iron oxide nanoparticles as received were diluted with Toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm (nominal "20\,nm" diameter) 4.1$\pm$0.8 \,nm	("10\,nm" diameter) 3.1$\pm$0.6\,nm ("5\,nm"). In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion can be seen as the inter-particle distance.
 
 \begin{figure}[tp]
 	\centering
@@ -271,12 +271,12 @@ The detector shift is corrected before calculating the correlations, the rotatio
 \begin{figure}
 	\centering
 	\begin{subfigure}{0.35\textwidth}
-		\includegraphics[width=\linewidth]{images/kossel_gaas1.pdf}
+		\includegraphics[width=\linewidth]{images/kossel_gaas1r2.pdf}
 		\caption{Indexed lines on sample 1}
 	\end{subfigure}
 \hspace{0.2cm}
 	\begin{subfigure}{0.35\textwidth}
-		\includegraphics[width=\linewidth]{images/kossel_gaas2.pdf}
+		\includegraphics[width=\linewidth]{images/kossel_gaas2r2.pdf}
 		\caption{Indexed lines on sample 2}
 	\end{subfigure}
 	\caption[Kossel lines on GaAs samples]{Indexed Kossel lines in the determined orientation overlaid over the mean of 5000 shots after background subtraction. For a list of all considered indices, see  \fref{tab:kosselpeaks}.}
@@ -364,7 +364,7 @@ As the 5\,um and 10\,um foils suffer from severe undersampling along the horizon
 		\label{fig:resnanorad}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.9\textwidth}
-		\includegraphics[width=\linewidth]{images/resultnano2d.pdf}
+		\includegraphics[width=\linewidth]{images/resultnano2dr.pdf}
 		\caption{Images}
 		\label{fig:resnano2d}
 	\end{subfigure}
