--- a/Tex/title.tex
+++ b/Tex/title.tex
@@ -15,15 +15,15 @@
 				\HRule \\[1.5cm]}
 			\textsc{\Large Master Thesis}\\[0.5cm]
 					
-			\emph{by}\\
+			
 			Felix Frederik Zimmermann\\
 			Matrikel-Nr. 343004\\[0.5cm]
 			
 			\begin{table}[h]
 				\centering
 				\begin{tabular}{rl}
-					Erstgutachter:& Prof. Dr. Tais Gorkhover\\
-					Zweitgutachter:& Prof. Dr. Thomas Möller\\
+					Erstgutachter:& Prof. Dr. Thomas Möller\\
+					Zweitgutachter:& Prof. Dr. Tais Gorkhover\\
 				\end{tabular}
 			\end{table}		
 			{\large \today}
