--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -135,3 +135,11 @@
 \end{tabular}
 \end{table}
 \FloatBarrier
+\section{Outlook}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.8\linewidth]{images/ox18.pdf}
+	\caption[SAXS of AAO membrane sample]{SAXS measurement of one of the AAO membranes used for the LCLS experiment, showing well defined features which can be used in an IDI measurement.}
+	\label{fig:kosselgaasmean}
+\end{figure}
+
