--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -24,7 +24,7 @@ As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissol
 	\end{tabular}
 \end{table}
 
-\subsection{Nanoparticles in Poly(methyl methacrylate/etylhexyl methacrylate)  Matrix}
+\subsection{Nanoparticles in Poly-(methyl methacrylate / etylhexyl methacrylate)  Matrix}
 As a second nanoparticle in polymer sample, an Azobisisobutyronitrile (AIBN) initiated methyl methacrylate (MMA)/etylhexyl methacrylate (EHMA) polymerisation with magnetite nanoparticles was performed. 
 The nanoparticle solution was concentrated to XXX in toluene by precipitation, centrifugation and redispersion. To account for the different iron concentration, to different amounts of the nanoparticle solution and additional toluene, 800\,ul of EHMA was added each (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution was bubbled with N$_2$ for 5\,min. To start the polymerisation, 20\,mg of AIBN were added and the solution was bubbled again with N$_2$  for 10\,min before heating it up to XXX using a water bath under weak sonication using a sonic bath. The mixture was kept at XXX for XXX.
 The vials were uncapped and the polymer dried for 12h at XXX. The polymer was removed from the vials and cut into slices of approximatly XXX thickness using a slow spinning diamond saw.
@@ -271,12 +271,12 @@ The detector shift is corrected before calculating the correlations, the rotatio
 \begin{figure}
 	\centering
 	\begin{subfigure}{0.35\textwidth}
-		\includegraphics[width=\linewidth]{images/kossel_gaas1r2.pdf}
+		\includegraphics[width=\linewidth]{images/kossel_gaas1r.pdf}
 		\caption{Indexed lines on sample 1}
 	\end{subfigure}
 \hspace{0.2cm}
 	\begin{subfigure}{0.35\textwidth}
-		\includegraphics[width=\linewidth]{images/kossel_gaas2r2.pdf}
+		\includegraphics[width=\linewidth]{images/kossel_gaas2r.pdf}
 		\caption{Indexed lines on sample 2}
 	\end{subfigure}
 	\caption[Kossel lines on GaAs samples]{Indexed Kossel lines in the determined orientation overlaid over the mean of 5000 shots after background subtraction. For a list of all considered indices, see  \fref{tab:kosselpeaks}.}
@@ -285,15 +285,17 @@ The detector shift is corrected before calculating the correlations, the rotatio
 
 \begin{table}[]
 	\caption{Results of the Kossel line analysis}
+	\begin{small}
 \begin{tabular}{llllllll}
 	\hline
-	Sample & \multicolumn{2}{l}{Translation} & \multicolumn{3}{l}{Rotation}  & Detector Distance &  \\
+	Sample & \multicolumn{2}{l}{Offset of Detector} & \multicolumn{3}{l}{Rotation of Detector}  & Detector Distance &  \\
 	& x in mm        & y in mm        & yaw              & pitch           & roll           & in mm             &  \\ 
 	\hline
 	GaAs 1 & 1.4$\pm$0.2    & 6.4$\pm$0.4    & -0.4°$\pm$0.2° & 0.1°$\pm$0.2° & 1.5°$\pm$0.2° & 141.7$\pm$0.8     &  \\
 	GaAs 2 & 1.3$\pm$0.2    & 5.8$\pm$0.3    & -0.2°$\pm$0.3° & 0.1°$\pm$0.2° & 46.1°$\pm$0.1° & 139.9$\pm$0.8     &  \\
 	\hline
 \end{tabular}
+	\end{small}
 	
 	\label{tab:kosselfit}
 \end{table}
