add correction comparison plot

--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -23,6 +23,13 @@
 
 \begin{figure}[h!]
 	\centering
+	\includegraphics[width=\linewidth]{images/correction.pdf}
+	\caption[Correction of Periodic Detector Noise]{Correction of the periodic detector noise: On the left, the correlation without any applied correction for the periodic noise is shown. The artifacts occupy large areas of the reconstruction. On the right, the spatial spectrum for all columns of the detector and the center part of the correlation (right) are shown for three different cases: Raw (without the correction), with a portwise common mode correction using the median and a correction with adaptive blocks as described in the main text. The portwise correction creates artifacts on the non-affected columns of the detector, whereas the blockwise correction reduces the artifact to small areas that can easily be masked out.}
+	\label{fig:app_correction}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
 	\begin{subfigure}[b]{0.45\textwidth}
 		\includegraphics[width=\linewidth]{images/spectrum_foil_cu.pdf}
 	\end{subfigure}
