--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -192,8 +192,7 @@ Masks for both detectors were created based on the standard deviation in dark im
 The masks were dilated by 5 pixels.
 
 \paragraph{Detector Artifacts}
-During the experiment, an unnoticed failure of the electronics of the octal detector has occurred, manifesting as periodic noise on most of the detector tiles at a much higher level than expected (see \fref{fig:octalissue} for an illustration). Not all columns of a tile are affected (in contrast to common-mode effects commonly encountered with different detectors). As the overall affected area of the detector is substantial and the noise leaks through the photon counting scheme by slightly influencing the probability of a pixel being considered a photon hit, causing correlations and therefore artifacts in the reconstruction in one direction, a correction was applied to the affected columns of affected tiles of the detector. For the correction, the median over the affected columns is calculated (for each of the eight separate read out areas of a tile independently) and subtracted. This reduces the artifact, but doesn't fully remove it. As the artifact in the reconstructions is limited to low $q$ compared to the expected positions of the Bragg peaks, no further correction as been applied.
-
+During the experiment, an unnoticed failure of the electronics of the octal detector has occurred, manifesting as periodic noise on most of the detector tiles at a much higher level than expected (see \fref{fig:octalissue} for an illustration). Not all columns of a tile are affected (in contrast to common-mode effects commonly encountered with different detectors). As the overall affected area of the detector is substantial and the noise leaks through the photon counting scheme by slightly influencing the probability of a pixel being considered a photon hit, causing correlations and therefore artifacts in the reconstruction in one direction, a correction was applied to the affected columns of affected tiles of the detector. For the correction, affected columns are first identified by filtering on the fourier transform, neighboring effected columns are considered as a block and the medians over those block is calculated and subtracted. This scheme is chosen instead of the more commonly used portwise common modes due to the uneven strength of the artifact (see \fref{fig:app_correction} for a comparison). Using this correction reduces the artifact, but does not completely remove it. As the remaining artifact in the reconstructions is limited to low $q$ compared to the expected positions of the feautures of the samples and only two orthogonal lines, it can be masked out.
 
 
 
@@ -361,7 +360,7 @@ As the 5\,um and 10\,um foils suffer from severe undersampling along the horizon
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\linewidth]{images/energy_binned.pdf}
-	\caption[Excitation energy binned reconstruction]{$g^2$ reconstructions using a 5\,um copper foil placed at the focus as the sample. The reconstructions have been performed on 4000 images each (10\% of all good shots recorded for this sample, see histogram on the left)  selected by excitation pulse energy estimates by upstream energy detectors as surrogate for the pulse length, similar to \cite{inoue2019}. Regression of the amplitude as (as described in the main text) shows a slight difference: 0.0038$\pm$0.0007 for the low energy shots, 0.0043$\pm$0.0007 for the medium energy shots and 0.0052$\pm$0.0007 for the high energy shots. This suggests dropping low energy shots from the reconstruction to improve the SNR.}
+	\caption[Excitation energy binned reconstruction]{$g^2$ reconstructions using a 5\,um copper foil placed at the focus as the sample. The reconstructions have been performed on 4000 images each (see histogram on the left)  selected by excitation pulse energy estimates by upstream energy detectors as surrogate for the pulse length, similar to the data selection in previous experiments at SACLA \cite{inoue2019}. Regression of the signal amplitude as (as described in the main text) shows a slight difference: 0.0038$\pm$0.0007 for the low energy shots, 0.0043$\pm$0.0007 for the medium energy shots and 0.0052$\pm$0.0007 for the high energy shots. This confirms the validity of dropping low energy shots from the reconstruction to improve the SNR.}
 	\label{fig:energy_binned}
 \end{figure}
 
