--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1098,6 +1098,45 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   abstract = {The ability to produce ultrashort, high-brightness X-ray pulses is revolutionizing the field of ultrafast X-ray spectroscopy. Free-electron laser (FEL) facilities are driving this revolution, but unique aspects of the FEL process make the required characterization and use of the pulses challenging. In this paper, we describe a number of developments in the generation of ultrashort X-ray FEL pulses, and the concomitant progress in the experimental capabilities necessary for their characterization and use at the Linac Coherent Light Source. This includes the development of sub-femtosecond hard and soft X-ray pulses, along with ultrafast characterization techniques for these pulses. We also describe improved techniques for optical cross-correlation as needed to address the persistent challenge of external optical laser synchronization with these ultrashort X-ray pulses. This article is part of the theme issue ‘Measurement of ultrafast electronic and structural dynamics with X-rays’.},
 }
 
+@Article{yang2008,
+  author   = {Zhengfan Yang and Pawel A. Penczek},
+  journal  = {Ultramicroscopy},
+  title    = {Cryo-EM image alignment based on nonuniform fast Fourier transform},
+  year     = {2008},
+  issn     = {0304-3991},
+  number   = {9},
+  pages    = {959-969},
+  volume   = {108},
+  abstract = {In single particle analysis, two-dimensional (2-D) alignment is a fundamental step intended to put into register various particle projections of biological macromolecules collected at the electron microscope. The efficiency and quality of three-dimensional (3-D) structure reconstruction largely depends on the computational speed and alignment accuracy of this crucial step. In order to improve the performance of alignment, we introduce a new method that takes advantage of the highly accurate interpolation scheme based on the gridding method, a version of the nonuniform fast Fourier transform, and utilizes a multi-dimensional optimization algorithm for the refinement of the orientation parameters. Using simulated data, we demonstrate that by using less than half of the sample points and taking twice the runtime, our new 2-D alignment method achieves dramatically better alignment accuracy than that based on quadratic interpolation. We also apply our method to image to volume registration, the key step in the single particle EM structure refinement protocol. We find that in this case the accuracy of the method not only surpasses the accuracy of the commonly used real-space implementation, but results are achieved in much shorter time, making gridding-based alignment a perfect candidate for efficient structure determination in single particle analysis.},
+  doi      = {https://doi.org/10.1016/j.ultramic.2008.03.006},
+  keywords = {Single particle analysis, Alignment, Image processing, Gridding},
+}
+
+@Article{chang2020,
+  author    = {Chang, Patrick and Pienaar, Etienne and Gebbie, Tim},
+  journal   = {SIAM Journal on Scientific Computing},
+  title     = {Malliavin--Mancino Estimators Implemented with Nonuniform Fast Fourier Transforms},
+  year      = {2020},
+  issn      = {1095-7197},
+  month     = {Jan},
+  number    = {6},
+  pages     = {B1378–B1403},
+  volume    = {42},
+  doi       = {10.1137/20m1325903},
+  publisher = {Society for Industrial & Applied Mathematics (SIAM)},
+}
+
+@Article{laguna1998,
+  author  = {Laguna, P. and Moody, G.B. and Mark, R.G.},
+  journal = {IEEE Transactions on Biomedical Engineering},
+  title   = {Power spectral density of unevenly sampled data by least-square analysis: performance and application to heart rate signals},
+  year    = {1998},
+  number  = {6},
+  pages   = {698-715},
+  volume  = {45},
+  doi     = {10.1109/10.678605},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
